Addedd css styling to the files

--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
     <script src="Login.js" defer></script>
 </head>
 <body>
-    <form>
+    <form class="main">
         <label>Email</label>
         <input type="email" name="Email" id="email">
         <label>Password</label>
