Configured the date of birth to numbers and added alerts

--- a/Project.html
+++ b/Project.html
@@ -14,9 +14,11 @@
                 <select id="gender" name="gender">
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
+                    <option value="Null"></option>
                 </select>
             </form>
             <button type="submit", onclick="submit()">Submit</button>
+            <p id="results">Hello There!</p>
     </body>
 
 </html>
