--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
+        <link href="Project.css"></head>>
         <script src="Project.js" defer></script>
         <h2>NAME SELECTOR</h2>
     </head>
