--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link href="Project.css"></head>>
+        <link rel="stylesheet" href="Project.css">
         <script src="Project.js" defer></script>
         <h2>NAME SELECTOR</h2>
     </head>
