--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="Project.css">
         <script src="Project.js" defer></script>
-        <h2>NAME SELECTOR</h2>
+        <h2>AKAN NAME SELECTOR</h2>
     </head>
     <body>
         <P>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names.</P>
