Fixed the 'Sunday' bug

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <h2>AKAN NAME SELECTOR</h2>
     </head>
     <body>
-        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. Here are Ghanian day names.</P>
+        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, <br>children are given their first name as a 'day name' which corresponds to <br>the day in the week they were born. Here are Ghanian day names.</P>
 
             <form>
                 <label>Date of Birth</label>
@@ -18,7 +18,9 @@
                     <option value="Null"></option>
                 </select>
             </form>
-            <button type="submit", onclick="submit()">Submit</button>
+            <br>
+                <button type="submit", onclick="submit()">Submit</button>
+                <button>Clear</button>
             <p id="results">Hello There!</p>
     </body>
 
