--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
             </form>
             <br>
                 <button type="submit", onclick="submit()">Submit</button>
-                <button>Clear</button>
+                <button id="clear">Clear</button>
             <p id="results">Hello There!</p>
     </body>
 
