--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Project.css">
         <script src="Project.js" defer></script>
+        <title>Akan Names</title>
         <h2>AKAN NAME GENERATOR</h2>
     </head>
     <body>
-        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, <br>children are given their first name as a 'day name' which corresponds to <br>the day in the week they were born. Here are Ghanian day names.</P>
+        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, <br>children are given their first name as a 'day name' which corresponds to <br>the day in the week they were born. Submit your details below to find out your Ghanian day name.</P>
+
 
             <form>
                 <label>Date of Birth</label>
