Alignemnt of the submit button

--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
         <h2>AKAN NAME GENERATOR</h2>
     </head>
     <body>
-        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, <br>children are given their first name as a 'day name' which corresponds to <br>the day in the week they were born. Submit your details below to find out your Ghanian day name.</P>
-
+        <P>Akan names are derived from Ghanian culture. Frequently in Ghana, <br>children are given their first name as a 'day name' 
+            which corresponds to <br>the day in the week they were born. Submit your details below to find out your Ghanian day name.</P>
 
             <form>
                 <label>Date of Birth</label>
