--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Project.css">
         <script src="Project.js" defer></script>
-        <title>Akan Names</title>
+        <title>Ghanian Akan Names</title>
         <h2>AKAN NAME GENERATOR</h2>
     </head>
     <body>
