Updated the clear button

--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,10 @@
                         <option value="Male">Male</option>
                         <option value="Female">Female</option>
                     </select> 
+                    <button id="clear" onclick="clear"()>clear</button>
             </form>
             <br>
-                <button type="submit", onclick="submit()">Submit</button>
-                <button id="clear">Clear</button>
+            <button type="submit", onclick="submit()">Submit</button>              
             <p id="results">Hello There!</p>
     </body>
 
